--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@
 }
 
 :root {
-    --bg-color: #686868;
-    --second-bg-color: #a0a0a0;
+    --bg-color: #2b2a2a;
+    --second-bg-color: #616161;
     --text-color: #fff;
     --main-color: #0ef;
 }
@@ -90,6 +90,14 @@ section {
     font-weight: 700;
 }
 
+.home-content h3:nth-of-type(2) {
+    margin-bottom: 2rem;
+}
+
+span {
+    color: var(--main-color);
+}
+
 .home-content h1 {
     font-size: 5.6rem;
     font-weight: 700;
@@ -112,4 +120,19 @@ section {
     font-size: 2rem;
     color: var(--main-color);
     margin: 3rem 1.5rem 3rem 0;
+    transition: .5s ease;
+}
+
+.social-media a:hover {
+    background: var(--main-color);
+    color: var(--second-bg-color);
+    box-shadow: 0 0 1rem var(--main-color);
+}
+
+.btn {
+    display: inline-block;
+    padding: 1rem 2.8rem;
+    background: var(--main-color);
+    border-radius: 4rem;
+    box-shadow: 0 0 1rem var(--main-color);
 }
